--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                   <div class="bg-holder overlay" style="background-image:url(../assets/img/12.png);" data-parallax="" data-rellax-percentage="0.5" data-rellax-speed="-3"></div>
                   <!--/.bg-holder-->
                   <div class="position-relative py-8 py-md-11" data-zanim-timeline="{}" data-zanim-trigger="scroll">
-                    <h2 class="fs-4 text-white px-4 px-sm-0 display-4 mb-4" data-zanim-xs='{"delay":0.1}'>train insane or remain the same</h2>
-                    <div data-zanim-xs='{"delay":0.2}'><a class="btn btn-outline-light border-2 mt-3" href="#!">the fear schredder</a></div>
+                    <h2 class="fs-4 text-white px-4 px-sm-0 display-4 mb-4" data-zanim-xs='{"delay":0.1}'>Knowledge is power</h2>
+                    <div data-zanim-xs='{"delay":0.2}'><a class="btn btn-outline-light border-2 mt-3" href="mailto: aditio.julian.com">Send Me Email</a></div>
                   </div>
                 </div>
               </div>
