--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-7">
                 <p class="lead"><span class="text-dark fw-semi-bold">Quality and precision</span> will giving a great design for your projects, all beauty will become one if you choose the right person to do something</p>
-                <h6 class="mt-5"> Aditio Julian</h6><img src="../assets/img/signature.png" alt="" width="220" /><br /><a class="btn btn-outline-danger mt-6" href="#!">About us</a>
+                <h6 class="mt-5"> Aditio Julian</h6><img src="../assets/img/signature.png" alt="" width="220" /><br /><a class="btn btn-outline-danger mt-6" href="../homes/default.html">About me</a>
               </div>
             </div>
           </div><!-- end of .container-->
@@ -148,16 +148,16 @@
                         <p class="mb-4 mb-lg-6" data-zanim-xs='{"delay":0.2}'>Get through to the unlimited idea to make unbeliving design</p>
                       </div>
                       <div class="overflow-hidden">
-                        <h4 class="mb-sm-1 mb-md-2" data-zanim-xs='{"delay":0.4}'>connect and share</h4>
+                        <h4 class="mb-sm-1 mb-md-2" data-zanim-xs='{"delay":0.4}'>Experience</h4>
                       </div>
                       <div class="overflow-hidden">
-                        <p class="mb-4 mb-lg-6" data-zanim-xs='{"delay":0.5}'>connect with thousands of more active people in sparrow community, share your progress, stay motivated, get inspired.</p>
+                        <p class="mb-4 mb-lg-6" data-zanim-xs='{"delay":0.5}'>Experience in programming and design</p>
                       </div>
                       <div class="overflow-hidden">
-                        <h4 class="mb-sm-1 mb-md-2" data-zanim-xs='{"delay":0.7}'>fitness advice</h4>
+                        <h4 class="mb-sm-1 mb-md-2" data-zanim-xs='{"delay":0.7}'>Happiness </h4>
                       </div>
                       <div class="overflow-hidden">
-                        <p class="mb-0" data-zanim-xs='{"delay":0.8}'>know the best plan for your fitness from the physical experts in sparrow tips section anytime you want and build the best of you.</p>
+                        <p class="mb-0" data-zanim-xs='{"delay":0.8}'>not only love the design but do wholeheartedly and hard work</p>
                       </div>
                     </div>
                   </div>
@@ -195,7 +195,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-7">
               <h1 class="mb-3 fs-3 fs-sm-4 text-decoration-underline">built for makers</h1>
-              <p>For over a decade, creative people from around the world have used sparrow’s simple components and layouts to build unique and beautiful websites, manage and represent their works, delight their clients and users, and run their business their own way.</p>
+              <p>Check out some of my other designs</p>
             </div>
           </div>
           <div class="row mt-6">
