--- a/homes/default.html
+++ b/homes/default.html
@@ -9,10 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Sparrow | Look like an expert right from the start</title>
+    <title>Aditio Julian | UI/UX Designer</title>
 
     <!-- ===============================================-->
     <!--    Favicons-->
@@ -20,7 +21,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="https://prium.github.io/twbs-sparrow/v2.0.2/assets/img/favicons/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/img/favicons/favicon-16x16.png">
     <link rel="manifest" href="https://prium.github.io/twbs-sparrow/v2.0.2/assets/img/favicons/manifest.json">
     <meta name="msapplication-TileImage" content="../assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
@@ -28,7 +29,7 @@
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="../vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../vendors/plyr/plyr.css" rel="stylesheet">
     <link href="../vendors/loaders.css/loaders.min.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="https://fonts.googleapis.com/css?family=PT+Mono%7cPT+Serif:400,400i%7cLato:100,300,400,700,800,900" rel="stylesheet">
@@ -39,7 +40,7 @@
   <body class="overflow-hidden-x">
 
     <nav class="fancynavbar fancynavbar-expand-lg" data-zanim-lg='{"from":{"opacity":1,"x":70},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}' data-zanim-xs='{"from":{"opacity":1,"y":-37},"to":{"opacity":1,"y":0},"ease":"CubicBezier","duration":0.8,"delay":0.3}' data-zanim-trigger="scroll" data-exclusive="true">
-      <div class="fancynavbar-togglerbar" data-onscroll-fade-in="data-onscroll-fade-in"><a class="fancynavbar-brand" href="https://prium.github.io/twbs-sparrow/v2.0.2/index.html"><img class="fancynavbar-brand-img" src="https://prium.github.io/twbs-sparrow/v2.0.2/assets/img/logo-sparrow-invert.svg" alt="" width="30" height="30" data-zanim-lg='{"from":{"opacity":0,"x":45},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.4}' data-zanim-trigger="scroll" />
+      <div class="fancynavbar-togglerbar" data-onscroll-fade-in="data-onscroll-fade-in"><a class="fancynavbar-brand" href=""><img class="fancynavbar-brand-img" src="../assets/img/logogg.png" alt="" width="30" height="30" data-zanim-lg='{"from":{"opacity":0,"x":45},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.4}' data-zanim-trigger="scroll" />
           <!--You can use icon or text logo as well-->
           <!--<span class='fab fa-superpowers fs-3'></span>-->
           <!--<span class='logo-sparrow'>S</span>-->
@@ -53,46 +54,18 @@
       </div>
       <div class="fancynavbar-collapse">
         <ul class="fancynavbar-nav">
-          <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">homes</span></a>
+          <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">My Social Media</span></a>
             <div class="fancy-dropdown-menu">
               <div class="row pb-4 pt-3">
-                <div class="col-auto"><a class=" false fancy-dropdown-item" href="default.html"> Default</a><a class=" false fancy-dropdown-item" href="bicycle.html"> Bicycle</a><a class=" false fancy-dropdown-item" href="bigcartel.html"> Bigcartel</a><a class=" false fancy-dropdown-item" href="cafe.html"> Cafe</a><a class=" false fancy-dropdown-item" href="digital.html"> Digital</a><a class=" false fancy-dropdown-item" href="ecommerce.html"> Ecommerce</a><a class=" false fancy-dropdown-item" href="event.html"> Event</a><a class=" false fancy-dropdown-item" href="interior.html"> Interior</a><a class=" false fancy-dropdown-item" href="landing.html"> Landing</a><a class=" false fancy-dropdown-item" href="promotion.html"> Promotion</a><a class=" false fancy-dropdown-item" href="software.html"> Software</a><a class=" false fancy-dropdown-item" href="studio.html"> Studio</a></div>
+                <div class="col-auto"><a class=" false fancy-dropdown-item" href="https://www.linkedin.com/in/aditiojulian/"> Linkedin</a><a class=" false fancy-dropdown-item" href="https://www.instagram.com/aditioj/"> Instagram</a>
               </div>
             </div>
           </li>
-          <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">pages</span></a>
-            <div class="fancy-dropdown-menu">
-              <div class="row pb-4 pt-3">
-                <div class="col-sm-auto pe-4"><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/404.html"> 404</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/about.html"> About</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/blog.html"> Blog</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/blog-single.html"> Blog single</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/cart.html"> Cart</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/casestudy.html"> Casestudy</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/coming-soon.html"> Coming soon</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/contact.html"> Contact</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/one-page.html"> One page</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/portfolio.html"> Portfolio</a></div>
-                <div class="col-sm-auto pe-4"><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/profile.html"> Profile</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/rtl.html"> RTL</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/services.html"> Services</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/shop.html"> Shop</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/signin.html"> Signin</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/signup.html"> Signup</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/product-single.html"> Product single</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/split-static.html"> Split static</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/split-youtube.html"> Split youtube</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/starter.html"> Starter</a></div>
-              </div>
-            </div>
-          </li>
-          <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">components</span></a>
-            <div class="fancy-dropdown-menu">
-              <div class="row pb-2 pt-3">
-                <div class="col-sm-auto mb-3">
-                  <div class="row">
-                    <div class="col-sm-auto pe-4"><a class="fancy-dropdown-item text-white fw-black ls text-uppercase fs--1 mb-1" href="JavaScript:void(0)">Sparrow</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/accordion.html"> Accordion</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/anchor.html"> Anchor</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/backgrounds.html"> Backgrounds</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/borders.html"> Borders</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/carousel.html"> Carousel</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/colors.html"> Colors</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/cookie-notice.html"> Cookie notice</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/countdown.html"> Countdown</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/countup.html"> Countup</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/fancynav.html"> Fancynav</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/filter.html"> Filter</a></div>
-                    <div class="col-sm-auto pe-4"><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/googlemap.html"> Googlemap</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/icons.html"> Icons</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/inline-player.html"> Inline player</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/lightbox.html"> Lightbox</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/masonry.html"> Masonry</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/parallax.html"> Parallax</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/progressbar.html"> Progressbar</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/spacing.html"> Spacing</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/typed-text.html"> Typed text</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/typography.html"> Typography</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/sparrow/zanimation.html"> Zanimation</a></div>
-                  </div>
-                </div>
-                <div class="col-sm-auto pe-3 mb-3"><a class="fancy-dropdown-item text-white fw-black ls text-uppercase fs--1 mb-1" href="JavaScript:void(0)">Bootstrap</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/badges.html"> Badges</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/buttons.html"> Buttons</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/cards.html"> Cards</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/forms.html"> Forms</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/modals.html"> Modals</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/navbar.html"> Navbar</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/scrollspy.html"> Scrollspy</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/sizing.html"> Sizing</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/tables.html"> Tables</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/tabs.html"> Tabs</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/components/bootstrap/tooltips.html"> Tooltips</a></div>
-              </div>
-            </div>
-          </li>
-          <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">documentation</span></a>
-            <div class="fancy-dropdown-menu">
-              <div class="row pb-4 pt-3">
-                <div class="col-auto"><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/getting-started.html"> Getting started</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/file-structure.html"> File structure</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/customization.html"> Customization</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/gulp.html"> Gulp</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/rtl.html"> RTL</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/plugins.html"> Plugins</a><a class=" false fancy-dropdown-item" href="https://prium.github.io/twbs-sparrow/v2.0.2/documentation/changelog.html"> Changelog</a></div>
-              </div>
-            </div>
-          </li>
-          <li class="fancynav-item"><a class="fancynav-link" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/portfolio.html"><span class="fancynav-link-content">portfolio</span></a></li>
-          <li class="fancynav-item"><a class="fancynav-link" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/contact.html"><span class="fancynav-link-content">contact</span></a></li>
+          <li class="fancynav-item"><a class="fancynav-link" href="default.html"><span class="fancynav-link-content">Profile</span></a></li>
         </ul>
       </div>
     </nav>
+
 
 
     <!-- ===============================================-->
