--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html class="has-sidemenu" lang="en-US" dir="ltr">
 
-  
-<!-- Mirrored from prium.github.io/twbs-sparrow/v2.0.2/homes/bigcartel.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 30 Jul 2022 05:38:08 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,7 +59,7 @@
               </div>
             </div>
           </li>
-          <li class="fancynav-item"><a class="fancynav-link" href="default.html"><span class="fancynav-link-content">Profile</span></a></li>
+          <li class="fancynav-item"><a class="fancynav-link" href="homes/default.html"><span class="fancynav-link-content">Profile</span></a></li>
         </ul>
       </div>
     </nav>
