--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
               </div>
             </div>
           </li>
-          <li class="fancynav-item"><a class="fancynav-link" href="homes/default.html"><span class="fancynav-link-content">Profile</span></a></li>
+          <!--
+          <li class="fancynav-item"><a class="fancynav-link" href="homes/default.html"><span class="fancynav-link-content">Profile</span></a></li>-->
         </ul>
       </div>
     </nav>
