--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="row min-vh-100 flex-center py-8">
             <div class="col-lg-7" data-zanim-timeline='{"delay":0.6}' data-zanim-trigger="scroll"><img class="img-fluid" src="../assets/img/bigcartel.png" alt="" data-zanim-xs='{"delay":0,"from":{"opacity":0},"to":{"opacity":1}}' />
               <div class="overflow-hidden mb-4">
-                <p class="text-white px-lg-6 font-sans-serif" data-zanim-xs='{"delay":0}'>Join nearly a million makers, designers, marketers, and business owners using sparrow to build their outstanding websites.</p>
+                <p class="text-white px-lg-6 font-sans-serif" data-zanim-xs='{"delay":0}'>Hello world! I am Aditio Julian and I am a UI/UX Designer!</p>
               </div><a class="cursor-pointer" href="#!" data-bigpicture='{"ytSrc":"CkBJkE7bb4Y"}'><svg class="mx-auto d-block" width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 274.19 274.19" data-zanim-svg='{"duration":2,"ease":"CubicBezier"}' data-zanim-svg-trigger="scroll">
                   <defs>
                     <style>
@@ -215,25 +215,25 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-7">
-              <h3 class="mb-2">proud to be working with</h3>
-              <p>Since 2009, we have forged close relationships with over 100 brands allowing us to gain a wide experience marketing vastly different product types and services from various industries, locally, regionally and globally.</p>
+              <h3 class="mb-2">Be ready</h3>
+              <p>Not only preparing for the future but also evaluating the past</p>
             </div>
           </div>
         </div><!-- end of .container-->
       </section>
-<!-- <!-- ============================================-->
+     <!-- ============================================-->
       <!-- <section> begin ============================-->
         <section class="text-center" id="interiorProjects">
           <div class="container">
             <div class="row mb-5">
               <div class="col">
-                <h2 class="mb-5 text-decoration-underline">our projects</h2>
+                <h2 class="mb-5 text-decoration-underline">My other projects</h2>
                 <ul class="nav font-sans-serif mb-2 justify-content-center" data-filter-nav="data-filter-nav">
                   <li class="nav-item"><a class="nav-link isotope-nav active" href="#!" data-filter="*">all</a></li>
-                  <li class="nav-item"><a class="nav-link isotope-nav" href="#!" data-filter=".photography">photography</a></li>
-                  <li class="nav-item"> <a class="nav-link isotope-nav" href="#!" data-filter=".studio">studio</a></li>
-                  <li class="nav-item"> <a class="nav-link isotope-nav" href="#!" data-filter=".interior">interior</a></li>
-                  <li class="nav-item"> <a class="nav-link isotope-nav" href="#!" data-filter=".illustration">illustration</a></li>
+                  <li class="nav-item"><a class="nav-link isotope-nav" href="#!" data-filter=".photography">section a</a></li>
+                  <li class="nav-item"> <a class="nav-link isotope-nav" href="#!" data-filter=".studio">section b</a></li>
+                  <li class="nav-item"> <a class="nav-link isotope-nav" href="#!" data-filter=".interior">section c</a></li>
+                  <li class="nav-item"> <a class="nav-link isotope-nav" href="#!" data-filter=".illustration">section d</a></li>
                 </ul>
                 <div class="row g-3 mt-2" id="portfolio-gallery" data-zanim-timeline="{}" data-zanim-trigger="scroll" data-isotope='{"layoutMode":"packery"}'>
                   <div class="col-6 col-md-4 isotope-item interior"><a href="#!" data-bp="../assets/img/interior-7-f.jpg" data-bigpicture='{"gallery":"#portfolio-gallery"}' data-caption="my caption"><img class="rounded w-100 fit-cover" src="../assets/img/interior-7.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.1}' /></a></div>
@@ -260,7 +260,7 @@
                         </svg></a></div>
                   </div>
                   
-                  <div class="col-6 col-md-4 isotope-item photography"><a href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/casestudy.html" data-caption="my caption"><img class="rounded w-100 fit-cover" src="../assets/img/interior-10.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.5}' /></a></div>
+                  <div class="col-6 col-md-4 isotope-item photography"><a href="#!" data-caption="my caption"><img class="rounded w-100 fit-cover" src="../assets/img/interior-10.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.5}' /></a></div>
                 </div>
               </div>
             </div>
@@ -306,9 +306,7 @@
             <div class="modal-body text-center p-0"><button class="btn-close text-white position-absolute top-0 end-0 times-icon mt-2 me-2 p-0" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
               <ul class="list-unstyled my-0 py-4 font-sans-serif">
                 <li><a class="text-white fw-bold pt-1 d-block" href="default.html">English</a></li>
-                <li><a class="pt-1 d-block text-500" href="#!">Français</a></li>
-                <li><a class="text-500 pt-1 d-block" href="https://prium.github.io/twbs-sparrow/v2.0.2/pages/rtl.html">عربى</a></li>
-                <li><a class="pt-1 d-block text-500" href="#!">Deutsche</a></li>
+                <li><a class="pt-1 d-block text-500" href="#!">Indonesia</a></li>
               </ul>
             </div>
           </div>
