--- a/index.html
+++ b/index.html
@@ -98,22 +98,7 @@
             <div class="col-lg-7" data-zanim-timeline='{"delay":0.6}' data-zanim-trigger="scroll"><img class="img-fluid" src="../assets/img/bigcartel.png" alt="" data-zanim-xs='{"delay":0,"from":{"opacity":0},"to":{"opacity":1}}' />
               <div class="overflow-hidden mb-4">
                 <p class="text-white px-lg-6 font-sans-serif" data-zanim-xs='{"delay":0}'>Hello world! I am Aditio Julian and I am a UI/UX Designer!</p>
-              </div><a class="cursor-pointer" href="#!" data-bigpicture='{"ytSrc":"CkBJkE7bb4Y"}'><svg class="mx-auto d-block" width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 274.19 274.19" data-zanim-svg='{"duration":2,"ease":"CubicBezier"}' data-zanim-svg-trigger="scroll">
-                  <defs>
-                    <style>
-                      .play-path {
-                        fill: none;
-                        stroke: #ffffff;
-                        stroke-linecap: round;
-                        stroke-linejoin: round;
-                        stroke-width: 12px;
-                      }
-                    </style>
-                  </defs>
-                  <g>
-                    <path class="play-path" d="M208.31,29.4A129.12,129.12,0,1,1,137.1,8m-1.48,170.53L199.94,137,104.07,79.46v113"></path>
-                  </g>
-                </svg></a>
+              </div>
             </div>
           </div><a class="indicator indicator-down" data-zanim-timeline='{"delay":2}' data-zanim-trigger="scroll" href="#target-down"><span class="indicator-arrow indicator-arrow-one border-300" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":0.25}'></span><span class="indicator-arrow indicator-arrow-two border-300" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":0.5}'></span></a>
         </div><!-- end of .container-->
