--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-7">
                 <p class="lead"><span class="text-dark fw-semi-bold">Quality and precision</span> will giving a great design for your projects, all beauty will become one if you choose the right person to do something</p>
-                <h6 class="mt-5"> Aditio Julian</h6><img src="../assets/img/signature.png" alt="" width="220" /><br /><a class="btn btn-outline-danger mt-6" href="../homes/default.html">About me</a>
+                <br /><a class="btn btn-outline-danger mt-6" href="../homes/default.html">About me</a>
               </div>
             </div>
           </div><!-- end of .container-->
