--- a/homes/index.html
+++ b/homes/index.html
@@ -289,7 +289,7 @@
             <p class="fs--1 text-uppercase ls fw-bold mb-0">Aditio Julian 2022</p>
           </div>
           <div class="col-lg-4 text-lg-end order-lg-2 mt-2 mt-lg-0">
-            <p class="fs--1 text-uppercase ls fw-bold mb-0">Pompagas</a></p>
+            <p class="fs--1 text-uppercase ls fw-bold mb-0">Pompagas Nailuj</a></p>
           </div>
         </div>
       </div>
