--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-7">
               <h1 class="mb-3 fs-3 fs-sm-4 text-decoration-underline">built for makers</h1>
+               <a href="article1.php">Artikel 1</a>
+               <a href="article2.php">Artikel 2</a>
               <p>Check out some of my other designs</p>
             </div>
           </div>
