--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-7">
               <h3 class="mb-2">Be ready</h3>
+              <a href="homes/article1.php">Article 1</a>
+              <a href="homes/article2.php">Article 2</a>
               <p>Not only preparing for the future but also evaluating the past</p>
             </div>
           </div>
