--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-7">
               <h1 class="mb-3 fs-3 fs-sm-4 text-decoration-underline">built for makers</h1>
-               <a href="article1.php">Artikel 1</a>
-               <a href="article2.php">Artikel 2</a>
+               <a href="article1.html">Artikel 1</a>
+               <a href="article2.html">Artikel 2</a>
               <p>Check out some of my other designs</p>
             </div>
           </div>
@@ -203,8 +203,8 @@
           <div class="row justify-content-center">
             <div class="col-lg-7">
               <h3 class="mb-2">Be ready</h3>
-              <a href="homes/article1.php">Article 1</a>
-              <a href="homes/article2.php">Article 2</a>
+              <a href="homes/article1.html">Article 1</a>
+              <a href="homes/article2.html">Article 2</a>
               <p>Not only preparing for the future but also evaluating the past</p>
             </div>
           </div>
