--- a/article1.html
+++ b/article1.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+    </div>
+
     <div class="container">
         <h1>Bagaimana Cara Memasarkan Produk Secara Online</h1>
         <p>
