--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
               </div>
             </div>
           </li>
+          <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">My Article</span></a>
+            <div class="fancy-dropdown-menu">
+              <div class="row pb-4 pt-3">
+                <div class="col-auto"><a class=" false fancy-dropdown-item" href="article1.html"> How to product marketing</a><a class=" false fancy-dropdown-item" href="article2.html"> How to</a>
+              </div>
+            </div>
+          </li>
           <!--
           <li class="fancynav-item"><a class="fancynav-link" href="homes/default.html"><span class="fancynav-link-content">Profile</span></a></li>-->
         </ul>
