--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Aditio Julian | UI/UX Designer</title>
+    <title>Aditio Julian | Digitalconcept.ID</title>
 
     <!-- ===============================================-->
     <!--    Favicons-->
@@ -104,7 +104,7 @@
           <div class="row min-vh-100 flex-center py-8">
             <div class="col-lg-7" data-zanim-timeline='{"delay":0.6}' data-zanim-trigger="scroll"><img class="img-fluid" src="../assets/img/bigcartel.png" alt="" data-zanim-xs='{"delay":0,"from":{"opacity":0},"to":{"opacity":1}}' />
               <div class="overflow-hidden mb-4">
-                <p class="text-white px-lg-6 font-sans-serif" data-zanim-xs='{"delay":0}'>Hello world! I am Aditio Julian and I am a UI/UX Designer!</p>
+                <p class="text-white px-lg-6 font-sans-serif" data-zanim-xs='{"delay":0}'>Hello world! I am Aditio Julian and I am part of Digitalconcept!</p>
               </div>
             </div>
           </div><a class="indicator indicator-down" data-zanim-timeline='{"delay":2}' data-zanim-trigger="scroll" href="#target-down"><span class="indicator-arrow indicator-arrow-one border-300" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":0.25}'></span><span class="indicator-arrow indicator-arrow-two border-300" data-zanim-xs='{"from":{"opacity":0,"y":15},"to":{"opacity":1,"y":-5,"scale":1},"ease":"Back.easeOut","duration":0.4,"delay":0.5}'></span></a>
