--- a/article1.html
+++ b/article1.html
@@ -37,7 +37,7 @@
     
             .navbar a {
                 display: inline-block; /* Membuat link menjadi elemen blok */
-                background-color: #f44336; /* Warna latar belakang tombol */
+                background-color: #686868; /* Warna latar belakang tombol */
                 color: #fff;
                 text-decoration: none;
                 margin-right: 10px;
@@ -46,7 +46,7 @@
             }
     
             .navbar a:hover {
-                background-color: #e53935; /* Warna latar belakang tombol saat dihover */
+                background-color: #aaaaaa; /* Warna latar belakang tombol saat dihover */
             }
         </style>
     </head>
