--- a/article1.html
+++ b/article1.html
@@ -7,6 +7,10 @@
                 font-family: Arial, sans-serif;
                 margin: 0;
                 padding: 0;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
             }
     
             .container {
@@ -86,4 +90,10 @@
         </p>
     </div>
 </body>
+<script type="text/javascript">
+    document.addEventListener('contextmenu', function(e) {
+        e.preventDefault();
+    });
+</script>
+
 </html>
