--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
               <h3 class="mb-2">Be ready</h3>
               <a href="article1.html">Article 1</a>
               <a href="article2.html">Article 2</a>
+                <a href="article3.html">Article 3</a>
+            
               <p>Not only preparing for the future but also evaluating the past</p>
             </div>
           </div>
