--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="fancynav-item fancy-dropdown"><a class="fancynav-link fancy-dropdown-toggle" href="JavaScript:void(0)"><span class="fancynav-link-content">My Article</span></a>
             <div class="fancy-dropdown-menu">
               <div class="row pb-4 pt-3">
-                <div class="col-auto"><a class=" false fancy-dropdown-item" href="article1.html"> How to product marketing</a><a class=" false fancy-dropdown-item" href="article2.html"> How to</a>
+                <div class="col-auto"><a class=" false fancy-dropdown-item" href="article1.html"> Design sales Money app</a><a class=" false fancy-dropdown-item" href="article2.html"> Design of the job portal system</a><a class=" false fancy-dropdown-item" href="article3.html"> Design of the "Indonesian Snack" marketplace system</a>
               </div>
             </div>
           </li>
