--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- <section> begin ============================-->
       <section class="py-0 text-center" id="bigcartel-header">
         <div class="bg-holder overlay overlay-1" style="background-image:url(../assets/img/headers/bigcartel.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll">
-          <!--<div class="yt-video" data-youtube-embed='{"videoId":"5exNri8XJ-Q","startSeconds":1,"endSeconds":30}'></div>-->
+          <!--<div class="-video" data-youtube-embed='{"videoId":"5exNri8XJ-Q","startSeconds":1,"endSeconds":30}'></div>-->
         <video width="1920" height="1080" autoplay muted>
     <source src="videoplayback.webm" type="video/webm"></video>
         </div>
@@ -240,7 +240,7 @@
                   <div class="col-6 col-md-4 isotope-item studio"><a href="#!" data-bp="../assets/img/interior-9-f.jpg" data-bigpicture='{"gallery":"#portfolio-gallery"}' data-caption="my caption"><img class="rounded w-100 fit-cover" src="../assets/img/interior-9.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.4}' /></a></div>
                   <div class="col-6 col-md-4 isotope-item photography"><a href="#!" data-bp="../assets/img/interior-12-f.jpg" data-bigpicture='{"gallery":"#portfolio-gallery"}' data-caption="my caption"><img class="rounded w-100 fit-cover" src="../assets/img/interior-12.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.5}' /></a></div>
                   <div class="col-6 col-md-4 isotope-item illustration">
-                    <div class="position-relative"><img class="rounded w-100 fit-cover" src="../assets/img/interior-13.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.6}' /><a class="d-flex align-items-end justify-content-end h-100 pb-3 pe-3 position-absolute bottom-0 end-0" href="#!" data-bigpicture='{"ytSrc":"QD7pOiZBgy0"}' data-options='{"start":1,"end":75}'><svg width="45" height="45" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 274.19 274.19" data-zanim-svg='{"duration":2,"ease":"CubicBezier","trigger":"scroll"}'>
+                    <div class="position-relative"><img class="rounded w-100 fit-cover" src="../assets/img/interior-13.jpg" alt="" data-zanim-xs='{"animation":"zoom-in","delay":0.6}' /><a class="d-flex align-items-end justify-content-end h-100 pb-3 pe-3 position-absolute bottom-0 end-0" href="#!" data-bigpicture='{"imageSrc": "../assets/img/bicycle-01.jpg"}' data-options='{"start":1,"end":75}'><svg width="45" height="45" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 274.19 274.19" data-zanim-svg='{"duration":2,"ease":"CubicBezier","trigger":"scroll"}'>
                           <defs>
                             <style>
                               .play-path {
