--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
       <!-- <section> begin ============================-->
       <section class="py-0 text-center" id="bigcartel-header">
         <div class="bg-holder overlay overlay-1" style="background-image:url(../assets/img/headers/bigcartel.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll">
-          <!--<div class="-video" data-youtube-embed='{"videoId":"5exNri8XJ-Q","startSeconds":1,"endSeconds":30}'></div>-->
-        <video width="1920" height="1080" autoplay muted>
-    <source src="videoplayback.webm" type="video/webm"></video>
+          <div class="-video" src='{"videoplayback.webm","startSeconds":1,"endSeconds":30}'></div>
         </div>
         <!--/.bg-holder-->
         <div class="container">
