--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- <section> begin ============================-->
       <section class="py-0 text-center" id="bigcartel-header">
         <div class="bg-holder overlay overlay-1" style="background-image:url(../assets/img/headers/bigcartel.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll">
-          <div class="-video" src='{"../assets/img/.webm","startSeconds":1,"endSeconds":30}'></div>
+          <div class="-video" src='{"../assets/img/videoplayback.webm","startSeconds":1,"endSeconds":30}'></div>
         </div>
         <!--/.bg-holder-->
         <div class="container">
