--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-       <!--<section class="py-0 text-center" id="bigcartel-header">
-        <div class="bg-holder overlay overlay-1" style="background-image:url(../assets/img/headers/bigcartel.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll">
+      <section class="py-0 text-center" id="bigcartel-header">
+        <!--<div class="bg-holder overlay overlay-1" style="background-image:url(../assets/img/headers/bigcartel.jpg);" data-zanim-xs='{"delay":0.4,"animation":"zoom-out"}' data-zanim-trigger="scroll">
           <div class="-video" src='{"../assets/img/videoplayback.webm","startSeconds":1,"endSeconds":30}'></div>
         </div>
-        <!--/.bg-holder-->
+        <!--/.bg-holder--><div class="bg-holder overlay" style="background-image:url(../assets/img/bicycle-01.jpg);" data-parallax="" data-rellax-percentage="0.5" data-rellax-speed="-3"></div>
         <div class="container">
           <div class="row min-vh-100 flex-center py-8">
             <div class="col-lg-7" data-zanim-timeline='{"delay":0.6}' data-zanim-trigger="scroll"><img class="img-fluid" src="../assets/img/bigcartel.png" alt="" data-zanim-xs='{"delay":0,"from":{"opacity":0},"to":{"opacity":1}}' />
