--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Mono%7cPT+Serif:400,400i%7cLato:100,300,400,700,800,900" rel="stylesheet">
     <link href="../assets/css/theme.min.css" rel="stylesheet" />
     <link href="../assets/css/user.min.css" rel="stylesheet" />
+    <style>#bicycleAbout {
+      background-color: white;
+    }
+    </style>
   </head>
 
   <body class="overflow-hidden-x">
