--- a/index.html
+++ b/index.html
@@ -211,12 +211,18 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-7">
-              <h3 class="mb-2">Be ready</h3>
+              <h3 class="mb-2">My Article</h3>
+              <p>Not only preparing for the future but also evaluating the past</p>
+<div class="carousel">
+    <img src="../assets/img/porto_pm/arc1/Porto_PM1.png" alt="Gambar 1">
+    <img src="../assets/img/porto_pm/arc2/Porto_PM1.png" alt="Gambar 2">
+    <img src="../assets/img/porto_pm/arc3/Porto_PM31.png" alt="Gambar 3">
+</div>
               <a href="article1.html">Article 1</a>
               <a href="article2.html">Article 2</a>
                 <a href="article3.html">Article 3</a>
             
-              <p>Not only preparing for the future but also evaluating the past</p>
+              
             </div>
           </div>
         </div><!-- end of .container-->
