--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
               <p>Not only preparing for the future but also evaluating the past</p>
               <div class="carousel">
                   <img src="../assets/img/porto_pm/arc1/Porto_PM1.png" alt="Gambar 1">
-                  <a href="article1.html">Article 1</a>
+                  <br><a href="article1.html">Article 1</a>
                   <img src="../assets/img/porto_pm/arc2/Porto_PM1.png" alt="Gambar 2">
-                  <a href="article2.html">Article 2</a>
+                  <br><a href="article2.html">Article 2</a>
                   <img src="../assets/img/porto_pm/arc3/Porto_PM31.png" alt="Gambar 3">
-                  <a href="article3.html">Article 3</a>
+                  <br><a href="article3.html">Article 3</a>
               </div>
               
               
