--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
               <h3 class="mb-2">My Article</h3>
               <p>Not only preparing for the future but also evaluating the past</p>
               <div class="carousel">
-                  <img src="../assets/img/porto_pm/arc1/Porto_PM1.png" alt="Gambar 1">
-                  <br><a href="article1.html">Article 1</a>
-                  <img src="../assets/img/porto_pm/arc2/Porto_PM1.png" alt="Gambar 2">
-                  <br><a href="article2.html">Article 2</a>
-                  <img src="../assets/img/porto_pm/arc3/Porto_PM31.png" alt="Gambar 3">
-                  <br><a href="article3.html">Article 3</a>
+                  <a href="article1.html"><img src="../assets/img/porto_pm/arc1/Porto_PM1.png" alt="Gambar 1">
+                  </a><br>
+                  <a href="article2.html"></a><img src="../assets/img/porto_pm/arc2/Porto_PM1.png" alt="Gambar 2">
+                  </a><br>
+                  <a href="article3.html"></a><img src="../assets/img/porto_pm/arc3/Porto_PM31.png" alt="Gambar 3">
+                  </a>
               </div>
               
               
