--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
               <h3 class="mb-2">My Article</h3>
               <p>Not only preparing for the future but also evaluating the past</p>
               <div class="carousel">
-                  <a href="article1.html"><img src="../assets/img/porto_pm/arc1/Porto_PM1.png" alt="Gambar 1">
+                  <a onclick="window.open('https:article1.html', '_blank')"><img src="../assets/img/porto_pm/arc1/Porto_PM1.png" alt="Gambar 1">
                   </a><br>
-                  <a href="article2.html"></a><img src="../assets/img/porto_pm/arc2/Porto_PM1.png" alt="Gambar 2">
+                  <a href="article2.html"><img src="../assets/img/porto_pm/arc2/Porto_PM1.png" alt="Gambar 2">
                   </a><br>
-                  <a href="article3.html"></a><img src="../assets/img/porto_pm/arc3/Porto_PM31.png" alt="Gambar 3">
+                  <a href="article3.html"><img src="../assets/img/porto_pm/arc3/Porto_PM31.png" alt="Gambar 3">
                   </a>
               </div>
               
